--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,14 +7,14 @@
         <item
             android:id="@+id/nav_feed"
             android:icon="@drawable/ic_menu_feed"
-            android:title="@string/menu_home" />
+            android:title="@string/menu_feed" />
         <item
             android:id="@+id/nav_matches"
             android:icon="@drawable/ic_menu_soccer"
-            android:title="@string/menu_gallery" />
+            android:title="@string/menu_matches" />
         <item
             android:id="@+id/nav_about"
             android:icon="@drawable/ic_menu_info"
-            android:title="@string/menu_slideshow" />
+            android:title="@string/menu_about" />
     </group>
 </menu>
