MVVM, recyclerView, liveData

--- a/app/src/main/res/drawable/ic_icon.xml
+++ b/app/src/main/res/drawable/ic_icon.xml
@@ -4,38 +4,42 @@
     android:height="48dp"
     android:viewportWidth="48"
     android:viewportHeight="48">
-  <path
-      android:pathData="M2,24c0,-12.1503 9.8497,-22 22,-22c12.1503,0 22,9.8497 22,22c0,12.1503 -9.8497,22 -22,22c-12.1503,0 -22,-9.8497 -22,-22z"
-      android:strokeLineJoin="miter"
-      android:strokeWidth="1"
-      android:fillColor="#ffffff"
-      android:fillType="nonZero"
-      android:strokeColor="#00000000"
-      android:strokeLineCap="butt"/>
-  <path
-      android:pathData="M16.6105,35.8698l1.0401,-1.5423l-7.3095,-7.3095c-0.0996,-0.4482 -0.1797,-0.8997 -0.2373,-1.3573l-1.6607,-1.6607c0,-8.5918 6.965,-15.5568 15.5568,-15.5568c4.2959,0 8.1851,1.7413 11.0003,4.5565l10.9997,10.9997c0,0.0002 0,0.0004 0,0.0006c0,11.2741 -8.4804,20.5674 -19.4101,21.8492z"
-      android:strokeLineJoin="miter"
-      android:strokeWidth="1"
-      android:fillType="nonZero"
-      android:strokeColor="#00000000"
-      android:strokeLineCap="butt">
-    <aapt:attr name="android:fillColor">
-      <gradient 
-          android:startY="8.44322"
-          android:startX="8.44322"
-          android:endY="64.76913"
-          android:endX="66.32481"
-          android:type="linear">
-        <item android:offset="0" android:color="#4C000000"/>
-        <item android:offset="1" android:color="#00000000"/>
-      </gradient>
-    </aapt:attr>
-  </path>
-  <path
-      android:pathData="M24,8.4432c8.5918,0 15.5568,6.965 15.5568,15.5568c0,8.5918 -6.965,15.5568 -15.5568,15.5568c-8.5918,0 -15.5568,-6.965 -15.5568,-15.5568c0,-8.5918 6.965,-15.5568 15.5568,-15.5568zM24,9.9989c-0.7312,0 -1.4312,0.0778 -2.1313,0.2022l-0.5445,1.6023l2.6758,1.3068h7.0005l0.4356,-0.9179c-2.1468,-1.369 -4.6982,-2.1935 -7.4361,-2.1935zM20.1575,10.59c-2.5046,0.7156 -4.7137,2.1002 -6.4561,3.9825l1.9446,-0.3889l3.9825,-1.9913zM25.5557,14.6659l-2.2868,4.5737l5.1026,5.9738l4.0914,-0.9645l1.9446,-3.9981l-4.1848,-5.5849zM14.9148,15.6927l-2.4424,0.3889c-1.5557,2.2557 -2.4735,4.9626 -2.4735,7.9184c0,1.0423 0.1244,2.0379 0.3422,3.018l3.9825,-1.369l1.8979,-4.7604zM37.3166,19.6752l-1.4001,0.6845l-2.3335,4.667l1.3068,5.196h1.6023c0.9334,-1.8824 1.509,-3.9825 1.509,-6.2227c0,-1.509 -0.2333,-2.9713 -0.6845,-4.3248zM17.7773,20.8886l-2.2868,5.7404l3.5936,4.8071l4.9159,-1.2134l2.8158,-4.2314l-4.3715,-5.1026zM24,31.7784l-5.5849,1.4157l-1.8046,2.6758c2.1468,1.3534 4.667,2.1313 7.3895,2.1313c1.1357,0 2.2402,-0.1867 3.3136,-0.4356l1.3534,-2.6758zM30.2227,34.8898l-1.0734,2.0846c2.6291,-1.0423 4.9626,-2.8624 6.5183,-5.196h-0.7778z"
-      android:strokeLineJoin="miter"
-      android:strokeWidth="0"
-      android:fillColor="#4caf50"
-      android:fillType="nonZero"
-      android:strokeLineCap="butt"/>
+    <path
+        android:fillColor="#ffffff"
+        android:fillType="nonZero"
+        android:pathData="M2,24c0,-12.1503 9.8497,-22 22,-22c12.1503,0 22,9.8497 22,22c0,12.1503 -9.8497,22 -22,22c-12.1503,0 -22,-9.8497 -22,-22z"
+        android:strokeWidth="1"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="butt"
+        android:strokeLineJoin="miter" />
+    <path
+        android:fillType="nonZero"
+        android:pathData="M16.6105,35.8698l1.0401,-1.5423l-7.3095,-7.3095c-0.0996,-0.4482 -0.1797,-0.8997 -0.2373,-1.3573l-1.6607,-1.6607c0,-8.5918 6.965,-15.5568 15.5568,-15.5568c4.2959,0 8.1851,1.7413 11.0003,4.5565l10.9997,10.9997c0,0.0002 0,0.0004 0,0.0006c0,11.2741 -8.4804,20.5674 -19.4101,21.8492z"
+        android:strokeWidth="1"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="butt"
+        android:strokeLineJoin="miter">
+        <aapt:attr name="android:fillColor">
+            <gradient
+                android:endX="66.32481"
+                android:endY="64.76913"
+                android:startX="8.44322"
+                android:startY="8.44322"
+                android:type="linear">
+                <item
+                    android:color="#4C000000"
+                    android:offset="0" />
+                <item
+                    android:color="#00000000"
+                    android:offset="1" />
+            </gradient>
+        </aapt:attr>
+    </path>
+    <path
+        android:fillColor="#4caf50"
+        android:fillType="nonZero"
+        android:pathData="M24,8.4432c8.5918,0 15.5568,6.965 15.5568,15.5568c0,8.5918 -6.965,15.5568 -15.5568,15.5568c-8.5918,0 -15.5568,-6.965 -15.5568,-15.5568c0,-8.5918 6.965,-15.5568 15.5568,-15.5568zM24,9.9989c-0.7312,0 -1.4312,0.0778 -2.1313,0.2022l-0.5445,1.6023l2.6758,1.3068h7.0005l0.4356,-0.9179c-2.1468,-1.369 -4.6982,-2.1935 -7.4361,-2.1935zM20.1575,10.59c-2.5046,0.7156 -4.7137,2.1002 -6.4561,3.9825l1.9446,-0.3889l3.9825,-1.9913zM25.5557,14.6659l-2.2868,4.5737l5.1026,5.9738l4.0914,-0.9645l1.9446,-3.9981l-4.1848,-5.5849zM14.9148,15.6927l-2.4424,0.3889c-1.5557,2.2557 -2.4735,4.9626 -2.4735,7.9184c0,1.0423 0.1244,2.0379 0.3422,3.018l3.9825,-1.369l1.8979,-4.7604zM37.3166,19.6752l-1.4001,0.6845l-2.3335,4.667l1.3068,5.196h1.6023c0.9334,-1.8824 1.509,-3.9825 1.509,-6.2227c0,-1.509 -0.2333,-2.9713 -0.6845,-4.3248zM17.7773,20.8886l-2.2868,5.7404l3.5936,4.8071l4.9159,-1.2134l2.8158,-4.2314l-4.3715,-5.1026zM24,31.7784l-5.5849,1.4157l-1.8046,2.6758c2.1468,1.3534 4.667,2.1313 7.3895,2.1313c1.1357,0 2.2402,-0.1867 3.3136,-0.4356l1.3534,-2.6758zM30.2227,34.8898l-1.0734,2.0846c2.6291,-1.0423 4.9626,-2.8624 6.5183,-5.196h-0.7778z"
+        android:strokeWidth="0"
+        android:strokeLineCap="butt"
+        android:strokeLineJoin="miter" />
 </vector>
