--- a/app/src/main/res/layout/view_holder_match.xml
+++ b/app/src/main/res/layout/view_holder_match.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="48dp"
+    android:layout_height="72dp"
     android:background="?selectableItemBackground"
     android:padding="4dp">
 
@@ -55,6 +55,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:text="FT"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
