--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,7 +18,11 @@
         tools:layout="@layout/fragment_matches">
         <action
             android:id="@+id/action_nav_matches_to_matchDetailsFragment"
-            app:destination="@id/matchDetailsFragment" />
+            app:destination="@id/matchDetailsFragment"
+            app:enterAnim="@anim/fade_in"
+            app:exitAnim="@anim/fade_out"
+            app:popEnterAnim="@anim/fade_in"
+            app:popExitAnim="@anim/fade_out" />
     </fragment>
 
     <fragment
