--- a/app/src/main/res/layout/view_holder_match.xml
+++ b/app/src/main/res/layout/view_holder_match.xml
@@ -55,10 +55,9 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:text="FT"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/score"
         tools:ignore="HardcodedText" />
 
     <TextView
@@ -66,9 +65,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0-0"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/status"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
