--- a/app/src/main/res/layout/view_holder_match.xml
+++ b/app/src/main/res/layout/view_holder_match.xml
@@ -8,7 +8,7 @@
     android:padding="4dp">
 
     <ImageView
-        android:id="@+id/home_team_logo"
+        android:id="@+id/viewHolder_match_home_image"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:src="@drawable/ic_menu_soccer"
@@ -18,7 +18,7 @@
         tools:ignore="ContentDescription" />
 
     <ImageView
-        android:id="@+id/away_team_logo"
+        android:id="@+id/viewHolder_match_away_image"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:src="@drawable/ic_menu_soccer"
@@ -28,40 +28,29 @@
         tools:ignore="ContentDescription" />
 
     <TextView
-        android:id="@+id/home_team_name"
+        android:id="@+id/viewHolder_match_home_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="Arsenal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/home_team_logo"
+        app:layout_constraintStart_toEndOf="@id/viewHolder_match_home_image"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText" />
 
     <TextView
-        android:id="@+id/away_team_name"
+        android:id="@+id/viewHolder_match_away_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:text="Liverpool"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/away_team_logo"
+        app:layout_constraintEnd_toStartOf="@id/viewHolder_match_away_image"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText" />
 
     <TextView
-        android:id="@+id/status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="FT"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/score"
-        tools:ignore="HardcodedText" />
-
-    <TextView
-        android:id="@+id/score"
+        android:id="@+id/viewHolder_match_topText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0-0"
@@ -69,6 +58,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="HardcodedText" />
+
+
+    <TextView
+        android:id="@+id/viewHolder_match_bottomText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:text="FT"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/viewHolder_match_topText"
         tools:ignore="HardcodedText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
