--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="mediumGrey">#DEDEDE</color>
+    <color name="darkGrey">#858585</color>
+    <color name="colorPrimary">#6200EE</color>
+    <color name="whiteAlpha">#10FFFFFF</color>
 </resources>
