--- a/app/src/main/res/layout/fragment_add_tip.xml
+++ b/app/src/main/res/layout/fragment_add_tip.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="170dp"
-    tools:context=".AddTipFragment">
+    tools:context=".ui.addTip.AddTipFragment">
 
     <TextView
         android:id="@+id/descriptionTextView"
