--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -49,7 +49,7 @@
         tools:layout="@layout/fragment_profile" />
     <dialog
         android:id="@+id/addTipFragment"
-        android:name="com.better.AddTipFragment"
+        android:name="com.better.ui.addTip.AddTipFragment"
         android:label="fragment_add_tip"
         tools:layout="@layout/fragment_add_tip" >
         <action
