--- a/app/src/main/res/layout/view_holder_tip.xml
+++ b/app/src/main/res/layout/view_holder_tip.xml
@@ -1,40 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="72dp">
+    android:layout_height="72dp"
+    android:background="?selectableItemBackground"
+    android:padding="4dp">
 
     <ImageView
         android:id="@+id/viewHolder_tip_profile_picture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/viewHolder_tip_value"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_profile" />
 
     <TextView
-        android:id="@+id/viewHolder_tip_value"
+        android:id="@+id/viewHolder_match_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/viewHolder_tip_description"
-        app:layout_constraintEnd_toEndOf="@+id/viewHolder_tip_description"
-        app:layout_constraintStart_toStartOf="@+id/viewHolder_tip_description"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Match Name"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/viewHolder_tip_description"
+        app:layout_constraintStart_toStartOf="@id/viewHolder_tip_description" />
 
     <TextView
         android:id="@+id/viewHolder_tip_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="29dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="271dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Description"
+        android:textSize="20sp"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toBottomOf="@+id/viewHolder_tip_profile_picture"
         app:layout_constraintStart_toEndOf="@+id/viewHolder_tip_profile_picture"
-        app:layout_constraintTop_toBottomOf="@+id/viewHolder_tip_value" />
+        app:layout_constraintTop_toTopOf="@+id/viewHolder_tip_profile_picture" />
+
+    <TextView
+        android:id="@+id/viewHolder_tip_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tip Value"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@id/viewHolder_tip_description"
+        app:layout_constraintTop_toBottomOf="@id/viewHolder_tip_description" />
 </androidx.constraintlayout.widget.ConstraintLayout>
