--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -27,6 +27,7 @@
         <item name="chipBackgroundColor">@color/chip_background_color</item>
         <item name="android:textColor">@color/chip_text_color</item>
         <item name="checkedIconTint">@color/white</item>
+        <item name="chipIconVisible">false</item>
         <item name="rippleColor">@color/whiteAlpha</item>
     </style>
 </resources>
