--- a/app/src/main/res/layout/fragment_add_tip.xml
+++ b/app/src/main/res/layout/fragment_add_tip.xml
@@ -33,21 +33,21 @@
             style="@style/Theme.Better.CustomChipStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1" />
+            android:text="@string/chip_text_home" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/tie_chip"
             style="@style/Theme.Better.CustomChipStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="X" />
+            android:text="@string/chip_text_tie" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/away_win_chip"
             style="@style/Theme.Better.CustomChipStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2" />
+            android:text="@string/chip_text_away" />
 
     </com.google.android.material.chip.ChipGroup>
 
