--- a/app/src/main/res/layout/view_holder_tip.xml
+++ b/app/src/main/res/layout/view_holder_tip.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="72dp"
+    android:layout_height="wrap_content"
     android:background="?selectableItemBackground"
     android:padding="4dp">
 
@@ -28,10 +28,12 @@
         android:id="@+id/viewHolder_tip_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="29dp"
-        android:layout_marginEnd="271dp"
+        android:layout_marginStart="16dp"
+        android:ellipsize="end"
+        android:maxEms="15"
+        android:maxLines="3"
         android:text="Description"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="@+id/viewHolder_tip_profile_picture"
         app:layout_constraintStart_toEndOf="@+id/viewHolder_tip_profile_picture"
@@ -42,6 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Tip Value"
+        android:textColor="@color/green_500"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@id/viewHolder_tip_description"
         app:layout_constraintTop_toBottomOf="@id/viewHolder_tip_description" />
