--- a/app/src/main/res/layout/view_holder_tip.xml
+++ b/app/src/main/res/layout/view_holder_tip.xml
@@ -1,51 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?selectableItemBackground"
-    android:padding="4dp">
+    android:orientation="vertical"
+    android:padding="8dp">
 
-    <ImageView
-        android:id="@+id/viewHolder_tip_profile_picture"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_profile" />
-
-    <TextView
-        android:id="@+id/viewHolder_match_name"
-        android:layout_width="wrap_content"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_view"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Match Name"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/viewHolder_tip_description"
-        app:layout_constraintStart_toStartOf="@id/viewHolder_tip_description" />
+        android:layout_gravity="center"
+        android:padding="8dp"
+        app:cardCornerRadius="16dp">
 
-    <TextView
-        android:id="@+id/viewHolder_tip_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:ellipsize="end"
-        android:maxEms="15"
-        android:maxLines="3"
-        android:text="Description"
-        android:textSize="18sp"
-        android:textStyle="italic"
-        app:layout_constraintBottom_toBottomOf="@+id/viewHolder_tip_profile_picture"
-        app:layout_constraintStart_toEndOf="@+id/viewHolder_tip_profile_picture"
-        app:layout_constraintTop_toTopOf="@+id/viewHolder_tip_profile_picture" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/viewHolder_tip_value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Tip Value"
-        android:textColor="@color/green_500"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@id/viewHolder_tip_description"
-        app:layout_constraintTop_toBottomOf="@id/viewHolder_tip_description" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <ImageView
+                android:id="@+id/viewHolder_tip_profile_picture"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                app:srcCompat="@drawable/ic_profile" />
+
+            <TextView
+                android:id="@+id/viewHolder_match_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/viewHolder_tip_profile_picture"
+                android:layout_marginStart="16dp"
+                android:layout_toEndOf="@+id/viewHolder_tip_profile_picture"
+                android:padding="4dp"
+                android:text="Match Name"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/viewHolder_tip_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/viewHolder_match_name"
+                android:layout_alignStart="@+id/viewHolder_match_name"
+                android:ellipsize="end"
+                android:maxEms="15"
+                android:maxLines="3"
+                android:padding="4dp"
+                android:text="Description"
+                android:textSize="18sp"
+                android:textStyle="italic" />
+
+            <TextView
+                android:id="@+id/viewHolder_tip_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/viewHolder_tip_description"
+                android:layout_alignStart="@+id/viewHolder_tip_description"
+                android:padding="4dp"
+                android:text="Tip Value"
+                android:textColor="@color/green_500"
+                android:textStyle="bold" />
+
+        </RelativeLayout>
+
+    </androidx.cardview.widget.CardView>
+
+
+</LinearLayout>
