--- a/app/src/main/res/layout/fragment_add_tip.xml
+++ b/app/src/main/res/layout/fragment_add_tip.xml
@@ -75,7 +75,7 @@
         app:layout_constraintTop_toTopOf="@+id/descriptionTextView" />
 
     <Button
-        android:id="@+id/add_tip_button"
+        android:id="@+id/addTipButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
