--- a/app/src/main/res/layout/fragment_match_details.xml
+++ b/app/src/main/res/layout/fragment_match_details.xml
@@ -78,7 +78,7 @@
         app:layout_constraintTop_toBottomOf="@+id/away_textView" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view_match"
+        android:id="@+id/recyclerViewMatch"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/view3"
