--- a/app/src/main/res/layout/view_holder_tip.xml
+++ b/app/src/main/res/layout/view_holder_tip.xml
@@ -50,8 +50,7 @@
                 android:maxLines="3"
                 android:padding="4dp"
                 android:text="Description"
-                android:textSize="18sp"
-                android:textStyle="italic" />
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/viewHolder_tip_value"
