--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,11 +23,9 @@
 
     <style name="Theme.Better.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-    <style name="Theme.Better.CustomChipStyle" parent="Widget.MaterialComponents.Chip.Filter">
+    <style name="Theme.Better.CustomChipStyle" parent="Widget.MaterialComponents.Chip.Choice">
         <item name="chipBackgroundColor">@color/chip_background_color</item>
         <item name="android:textColor">@color/chip_text_color</item>
-        <item name="checkedIconTint">@color/white</item>
-        <item name="chipIconVisible">false</item>
         <item name="rippleColor">@color/whiteAlpha</item>
     </style>
 </resources>
