--- a/app/src/main/res/layout/fragment_add_tip.xml
+++ b/app/src/main/res/layout/fragment_add_tip.xml
@@ -47,17 +47,6 @@
 
     </com.google.android.material.chip.ChipGroup>
 
-    <TextView
-        android:id="@+id/tipValueTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:text="@string/select_winner_team_textView"
-        android:visibility="gone"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -66,7 +55,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         app:endIconMode="clear_text"
-        app:helperText="Tell us why you selected this result"
+        app:helperText="@string/description_helper_text"
         app:helperTextTextColor="@color/green_200"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
