--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -28,4 +28,11 @@
         <item name="android:textColor">@color/chip_text_color</item>
         <item name="rippleColor">@color/whiteAlpha</item>
     </style>
+
+    <style name="Theme.Better.ProfileStatsViewStyle">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
 </resources>
