--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -41,6 +41,9 @@
         <action
             android:id="@+id/action_matchDetailsFragment_to_addTipFragment"
             app:destination="@id/addTipFragment" />
+        <action
+            android:id="@+id/action_matchDetailsFragment_to_nav_profile"
+            app:destination="@id/nav_profile" />
     </fragment>
     <fragment
         android:id="@+id/nav_profile"
