--- a/app/src/main/res/layout/view_holder_tip.xml
+++ b/app/src/main/res/layout/view_holder_tip.xml
@@ -63,6 +63,16 @@
                 android:textColor="@color/green_500"
                 android:textStyle="bold" />
 
+            <ImageView
+                android:id="@+id/viewHolder_tip_team_winner_logo"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="16dp"
+                app:srcCompat="@drawable/ic_menu_soccer" />
+
         </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
