--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.profile.ProfileFragment">
 
     <View
-        android:id="@+id/view_status"
+        android:id="@+id/view_header"
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:background="@color/green_200"
@@ -16,36 +16,108 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
-        android:id="@+id/view_action"
+        android:id="@+id/view_buttons"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view_status" />
+        app:layout_constraintTop_toBottomOf="@+id/view_header" />
 
     <Button
         android:id="@+id/followBtn"
         style="@style/Theme.Better.ProfileActionButtonsStyle"
         android:layout_width="match_parent"
-        android:layout_margin="16dp"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
         android:text="Follow"
-        app:layout_constraintBottom_toBottomOf="@+id/view_action"
-        app:layout_constraintEnd_toEndOf="@+id/view_action"
-        app:layout_constraintStart_toStartOf="@+id/view_action"
-        app:layout_constraintTop_toBottomOf="@+id/view_status" />
+        app:layout_constraintBottom_toBottomOf="@+id/view_buttons"
+        app:layout_constraintEnd_toEndOf="@+id/view_buttons"
+        app:layout_constraintStart_toStartOf="@+id/view_buttons"
+        app:layout_constraintTop_toBottomOf="@+id/view_header" />
 
     <Button
         android:id="@+id/unFollowBtn"
         style="@style/Theme.Better.ProfileActionButtonsStyle"
         android:layout_width="match_parent"
-        android:layout_margin="16dp"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
         android:text="Unfollow"
-        app:layout_constraintBottom_toBottomOf="@+id/view_action"
-        app:layout_constraintEnd_toEndOf="@+id/view_action"
-        app:layout_constraintStart_toStartOf="@+id/view_action"
-        app:layout_constraintTop_toBottomOf="@+id/view_status" />
+        app:layout_constraintBottom_toBottomOf="@+id/view_buttons"
+        app:layout_constraintEnd_toEndOf="@+id/view_buttons"
+        app:layout_constraintStart_toStartOf="@+id/view_buttons"
+        app:layout_constraintTop_toBottomOf="@+id/view_header" />
+
+    <View
+        android:id="@+id/view_stats"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="@color/purple_200"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view_buttons" />
+
+    <ImageView
+        android:id="@+id/logo_pl"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="16dp"
+        android:src="@drawable/ic_menu_soccer"
+        app:layout_constraintBottom_toBottomOf="@+id/view_stats"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/view_stats"
+        tools:ignore="ContentDescription" />
+
+    <TextView
+        android:id="@+id/hit_pl"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="Hit: "
+        app:layout_constraintStart_toEndOf="@id/logo_pl"
+        app:layout_constraintTop_toTopOf="@+id/logo_pl" />
+
+    <TextView
+        android:id="@+id/miss_pl"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="Miss: "
+        app:layout_constraintBottom_toBottomOf="@+id/logo_pl"
+        app:layout_constraintStart_toEndOf="@id/logo_pl" />
+
+    <TextView
+        android:id="@+id/hit_pd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="Hit: "
+        app:layout_constraintStart_toEndOf="@id/logo_pd"
+        app:layout_constraintTop_toTopOf="@+id/logo_pd" />
+
+
+    <TextView
+        android:id="@+id/miss_pd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="Miss: "
+        app:layout_constraintBottom_toBottomOf="@+id/logo_pd"
+        app:layout_constraintStart_toEndOf="@id/logo_pd" />
+
+
+    <ImageView
+        android:id="@+id/logo_pd"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="80dp"
+        android:src="@drawable/ic_menu_soccer"
+        app:layout_constraintBottom_toBottomOf="@+id/view_stats"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/view_stats"
+        tools:ignore="ContentDescription" />
+
 
     <ImageView
         android:id="@+id/profile_image"
@@ -54,9 +126,9 @@
         android:layout_centerVertical="true"
         android:layout_marginStart="16dp"
         android:src="@drawable/ic_profile"
-        app:layout_constraintBottom_toBottomOf="@+id/view_status"
+        app:layout_constraintBottom_toBottomOf="@+id/view_header"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view_status"
+        app:layout_constraintTop_toTopOf="@+id/view_header"
         tools:ignore="ContentDescription" />
 
     <TextView
@@ -139,7 +211,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view_action" />
+        app:layout_constraintTop_toBottomOf="@+id/view_stats" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
